--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
 # This is a basic workflow to help you get started with Actions
+name: Deploy to GitHub Pages
 
 # Run workflow on every push to the master branch
 on:
