--- a/.github/workflows/secondmain.yml
+++ b/.github/workflows/secondmain.yml
@@ -3,7 +3,7 @@ name: Second Deploy to GitHub Pages
 # Run workflow on every push to the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ gh-pages ]
 
 jobs:
   deploy-to-github-pages:
