--- a/.github/workflows/secondmain.yml
+++ b/.github/workflows/secondmain.yml
@@ -3,7 +3,7 @@ name: Second Deploy to GitHub Pages
 # Run workflow on every push to the master branch
 on:
   push:
-    branches: [ gh-pages ]
+    branches: [ master ]
 
 jobs:
   deploy-to-github-pages:
@@ -21,11 +21,11 @@ jobs:
 
     # publishes Blazor project to the release-folder
     - name: Publish .NET Core Project
-      run: dotnet publish BlazorGitHubPagesDemo.csproj -c Release -o release --nologo
+      run: dotnet publish GitHubPagesDemo.csproj -c Release -o release --nologo
     
-    # changes the base-tag in index.html from '/' to 'BlazorGitHubPagesDemo' to match GitHub Pages repository subdirectory
-    - name: Change base-tag in index.html from / to BlazorGitHubPagesDemo
-      run: sed -i 's/<base href="\/" \/>/<base href="\/BlazorGitHubPagesDemo\/" \/>/g' release/wwwroot/index.html
+    # changes the base-tag in index.html from '/' to 'GitHubPagesDemo' to match GitHub Pages repository subdirectory
+    - name: Change base-tag in index.html from / to GitHubPagesDemo
+      run: sed -i 's/<base href="\/" \/>/<base href="\/GitHubPagesDemo\/" \/>/g' release/wwwroot/index.html
     
     # copy index.html to 404.html to serve the same file when a file is not found
     - name: copy index.html to 404.html
